crates/cribo/tests/snapshots/bundled_code@stickytape_script_using_from_to_import_multiple_values.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundling/stickytape_script_using_from_to_import_multiple_values/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

message = "Hello"
def print_stdout(value):
	print(value)
print_stdout(message)
