crates/cribo/tests/snapshots/bundled_code@stickytape_script_with_single_local_from_import.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundling/stickytape_script_with_single_local_from_import/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

# ─ Module: greeting ─
message = "Hello"

# ─ Entry Module: main ─
print(message)
