crates/cribo/tests/snapshots/bundled_code@stickytape_script_with_single_local_import_of_package.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundling/stickytape_script_with_single_local_import_of_package/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

# ─ Module: greeting ─
import types
greeting = types.ModuleType('greeting')
exec('message = "Hello"', globals(), greeting.__dict__)

# ─ Entry Module: main ─
print(greeting.message)
