crates/cribo/tests/snapshots/bundled_code@test_all_exports.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundling/test_all_exports/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

"""
Utility module that demonstrates __all__ handling.
Only exports helper_function and UtilityClass, not _internal_function.
"""
def helper_function():
    """A public helper function."""
    return "helper_result"
class UtilityClass:
    """A utility class that should be exposed."""

    def __init__(self, value):
        self.value = value

    def get_value(self):
        return self.value
"""
Test fixture for __all__ handling in bundled modules.
This tests that modules with __all__ only expose listed symbols.
"""
def main():
    """Test that only exported symbols are accessible."""
    result = helper_function()
    util = UtilityClass("test")
    print("Helper result:", result)
    print("Utility value:", util.get_value())
    return "test_all_exports_complete"
if __name__ == "__main__":
    result = main()
    print(result)
