crates/cribo/tests/snapshots/bundled_code@xfail_four_module_cycle.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundling/xfail_four_module_cycle/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys
import types
def __cribo_init___cribo_1444c2_module_a():
    if '__cribo_1444c2_module_a' in sys.modules:
        return sys.modules['__cribo_1444c2_module_a']
    module = types.ModuleType('__cribo_1444c2_module_a')
    module.__file__ = __file__ if '__file__' in globals() else None
    sys.modules['__cribo_1444c2_module_a'] = module
    sys.modules['module_a'] = module

    def start_process():
        from module_b import process_in_b
        """Start the processing chain A -> B -> C -> D -> A"""
        return f"A({process_in_b()})"
    module.start_process = start_process

    def final_step():
        """Final step called by module_d to complete the cycle"""
        return "A_final"
    module.final_step = final_step
    return module
def __cribo_init___cribo_277dcc_module_b():
    if '__cribo_277dcc_module_b' in sys.modules:
        return sys.modules['__cribo_277dcc_module_b']
    module = types.ModuleType('__cribo_277dcc_module_b')
    module.__file__ = __file__ if '__file__' in globals() else None
    sys.modules['__cribo_277dcc_module_b'] = module
    sys.modules['module_b'] = module

    def process_in_b():
        from module_c import process_in_c
        """Process in B, depends on C"""
        return f"B({process_in_c()})"
    module.process_in_b = process_in_b

    def step_b():
        return "B_step"
    module.step_b = step_b
    return module
def __cribo_init___cribo_21fc08_module_c():
    if '__cribo_21fc08_module_c' in sys.modules:
        return sys.modules['__cribo_21fc08_module_c']
    module = types.ModuleType('__cribo_21fc08_module_c')
    module.__file__ = __file__ if '__file__' in globals() else None
    sys.modules['__cribo_21fc08_module_c'] = module
    sys.modules['module_c'] = module

    def process_in_c():
        from module_d import process_in_d
        """Process in C, depends on D"""
        return f"C({process_in_d()})"
    module.process_in_c = process_in_c

    def step_c():
        return "C_step"
    module.step_c = step_c
    return module
def __cribo_init___cribo_f1543a_module_d():
    if '__cribo_f1543a_module_d' in sys.modules:
        return sys.modules['__cribo_f1543a_module_d']
    module = types.ModuleType('__cribo_f1543a_module_d')
    module.__file__ = __file__ if '__file__' in globals() else None
    sys.modules['__cribo_f1543a_module_d'] = module
    sys.modules['module_d'] = module

    def process_in_d():
        from module_a import final_step
        """Process in D, depends back on A - completes the 4-module cycle"""
        return f"D({final_step()})"
    module.process_in_d = process_in_d

    def step_d():
        return "D_step"
    module.step_d = step_d
    return module
__cribo_modules = {'module_a': '__cribo_1444c2_module_a', 'module_b': '__cribo_277dcc_module_b', 'module_c': '__cribo_21fc08_module_c', 'module_d': '__cribo_f1543a_module_d'}
__cribo_init_functions = {'__cribo_1444c2_module_a': __cribo_init___cribo_1444c2_module_a, '__cribo_277dcc_module_b': __cribo_init___cribo_277dcc_module_b, '__cribo_21fc08_module_c': __cribo_init___cribo_21fc08_module_c, '__cribo_f1543a_module_d': __cribo_init___cribo_f1543a_module_d}
class CriboBundledFinder:

    def __init__(self, module_registry, init_functions):
        self.module_registry = module_registry
        self.init_functions = init_functions

    def find_spec(self, fullname, path, target=None):
        if fullname in self.module_registry:
            synthetic_name = self.module_registry[fullname]
            if synthetic_name not in sys.modules:
                init_func = self.init_functions.get(synthetic_name)
                if init_func:
                    init_func()
            import importlib.util
            return importlib.util.find_spec(synthetic_name)
        return None
sys.meta_path.insert(0, CriboBundledFinder(__cribo_modules, __cribo_init_functions))
__cribo_init___cribo_1444c2_module_a()
__cribo_init___cribo_277dcc_module_b()
__cribo_init___cribo_21fc08_module_c()
__cribo_init___cribo_f1543a_module_d()
module_a = sys.modules['module_a']
def main():
    result = module_a.start_process()
    print(f"Four module cycle result: {result}")
if __name__ == "__main__":
    main()
